--- a/css/style2.css
+++ b/css/style2.css
@@ -230,6 +230,7 @@ td li .ld{background-position:0 -510;}
 	height: 1050px;
 	background: url(../images/taiwan.png) no-repeat;
 	position: relative;
+	margin:0px 0px 0px 150px;
 	}
 #maplist{
 	height:1050px;
@@ -401,7 +402,7 @@ td li .ld{background-position:0 -510;}
 }
 
 
-.keelung > a, .taipei a, .xinbei a, .taoyuan a, .hsinchu a, .miaoli a, .taichung a, .changhua a, .nantou a, .yunlin a, .chiayi a, .tainan a, .kaohsiung a, .pingtung a, .yilan a,  .hualien a, .taitung a, .penghu a, .kinmen a{ background:url(../images/maplistname.png);display:block; width:60px; height:50px;}
+.keelung> a, .taipei a, .xinbei a, .taoyuan a, .hsinchu a, .miaoli a, .taichung a, .changhua a, .nantou a, .yunlin a, .chiayi a, .tainan a, .kaohsiung a, .pingtung a, .yilan a,  .hualien a, .taitung a, .penghu a, .kinmen a{ background:url(../images/maplistname.png);display:block; width:60px; height:50px;}
 
 .keelung a{background-position:0 -50px; }
 .taipei a{background-position:0 -100px; }
