--- a/css/block_style.css
+++ b/css/block_style.css
@@ -11,8 +11,8 @@
 }
 
 .card {
-  min-width: 350px;
-  width: 350px;
+  min-width: 300px;
+  width: 300px;
   position: relative;
   margin: 15px 15px;
   height: 320px;
@@ -57,7 +57,7 @@
   transition: all 0.1s linear;
 }
 .card .card-image {
-  width: 101%;
+  width: 100%;
   height: 275px;
   position: relative;
   border-top-right-radius: 5px;
@@ -75,22 +75,24 @@
   color: rgba(255, 255, 255, 0.85);
 }
 .card .card-info .card-title {
-  line-height: 35px;
+  line-height: 40px;
   height: 40px;
   position: relative;
-  top: 0px;
+  top: -1px;
   font-size: 25px;
   text-align: center;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
   background: rgba(0, 0, 0, 0.6);
   box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.3);
 }
 .card .card-info .card-detail {
   line-height: 1.5em;
   font-size: 1em;
-  height: 237px;
+  height: 236px;
   background: rgba(0, 0, 0, 0.6);
   position: relative;
-  top: -2px;
+  top: -1px;
   padding: 5px 20px 0px 20px;
   opacity: 0;
   transform: scaleY(0);
