--- a/css/style1.css
+++ b/css/style1.css
@@ -84,4 +84,4 @@
     margin-bottom:15px;
     text-align:center
 }
-.widget{padding-left:11px;padding-right:11px}.widget .title{border-bottom:1px solid #f04646;color:#f04646;font-size:16px;line-height:20px;margin:0 0 10px;padding-bottom:10px}.widget ul,.widget ol,.widget li{list-style-type:none;margin:0}.widget li{border-bottom:1px solid #ebe5e1;padding:10px 0}.widget li:first-child{padding-top:0}.widget li a{color:#564e4a;display:block}.widget li a:hover{color:#ac8c85}.widget+.ad{margin-top:20px}.widget+.ad iframe{display:block;margin:0 auto}
+.widget{padding-left:11px;padding-right:11px}.widget .title{border-bottom:1px solid #f04646;color:#f04646;font-size:16px;line-height:20px;margin:0 0 10px;padding-bottom:10px}.widget ul,.widget ol,.widget li{list-style-type:none;margin:0}.widget li{border-bottom:1px solid #ebe5e1;padding:10px 0}.widget li:first-child{padding-top:0}.widget li a{display:block}.widget li a:hover{color:#ac8c85}.widget+.ad{margin-top:20px}.widget+.ad iframe{display:block;margin:0 auto}
