--- a/css/top.css
+++ b/css/top.css
@@ -1,9 +1,9 @@
 #top{
     position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background: rgb(0, 0, 0);
-    background: rgba(0, 0, 0, 0.7);
+    bottom: 10px;
+    right: 10px;
+    background: rgb(92, 184, 92);
+    background: rgba(92, 184, 92, 0.28);
     width: 50px;
     height: 50px;
     display: block;
@@ -19,7 +19,7 @@
     transition: all 0.3s ease;
 }
 #top i{
-    color: #fff;
+    color: #EFF8EF;
     margin: 0;
     position: relative;
     left: 16px;
@@ -32,10 +32,9 @@
     transition: all 0.3s ease;
 }
 #top:hover{
-    background: rgba(0, 0, 0, 0.9);
+    background: rgba(92, 184, 92, 0.72);
 }
 #top:hover i{
-    color: #fff;
+    color: #EFF8EF;
     top: 5px;
-}
 }
